PFC/Yocto_Infor/yocto_TXT/output_2497.txt
* [meta-rockchip][PATCH] trusted-firmware-a: Drop 0001-Fix-build-with-gcc-11.patch
@ 2021-12-08 19:54 Khem Raj
  2021-12-09  2:02 ` Trevor Woerner
  0 siblings, 1 reply; 2+ messages in thread
From: Khem Raj @ 2021-12-08 19:54 UTC (permalink / raw)
  To: yocto; +Cc: twoerner, Khem Raj

This has been included upstream see [1]

[1] https://review.trustedfirmware.org/plugins/gitiles/TF-A/trusted-firmware-a/+/f943b7c8e292e3aad2fcbdd0a37505f62b3b4c87%5E%21/#F0

Signed-off-by: Khem Raj <raj.khem@gmail.com>
---
 .../files/0001-Fix-build-with-gcc-11.patch    | 34 -------------------
 .../trusted-firmware-a_%.bbappend             |  1 -
 2 files changed, 35 deletions(-)
 delete mode 100644 recipes-bsp/trusted-firmware-a/files/0001-Fix-build-with-gcc-11.patch

diff --git a/recipes-bsp/trusted-firmware-a/files/0001-Fix-build-with-gcc-11.patch b/recipes-bsp/trusted-firmware-a/files/0001-Fix-build-with-gcc-11.patch
deleted file mode 100644
index 7956717..0000000
--- a/recipes-bsp/trusted-firmware-a/files/0001-Fix-build-with-gcc-11.patch
+++ /dev/null
@@ -1,34 +0,0 @@
-From d4c60a312271e000e8339f0b47a302c325313758 Mon Sep 17 00:00:00 2001
-From: Khem Raj <raj.khem@gmail.com>
-Date: Tue, 11 May 2021 11:46:30 -0700
-Subject: [PATCH] Fix build with gcc 11
-
-Fixes
-plat/rockchip/rk3399/drivers/dram/dram.c:13:22: error: ignoring attribute 'section (".pmusram.data")' because it conflicts with previous 'section (".sram.data")' [-Werror=attributes]
-
-See [1]
-
-[1] https://developer.trustedfirmware.org/T925
-
-Upstream-Status: Pending
-Signed-off-by: Khem Raj <raj.khem@gmail.com>
----
- plat/rockchip/rk3399/drivers/dram/dram.h | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-diff --git a/plat/rockchip/rk3399/drivers/dram/dram.h b/plat/rockchip/rk3399/drivers/dram/dram.h
-index 0eb12cf29..5572b1612 100644
---- a/plat/rockchip/rk3399/drivers/dram/dram.h
-+++ b/plat/rockchip/rk3399/drivers/dram/dram.h
-@@ -149,7 +149,7 @@ struct rk3399_sdram_params {
- 	uint32_t rx_cal_dqs[2][4];
- };
- 
--extern __sramdata struct rk3399_sdram_params sdram_config;
-+extern struct rk3399_sdram_params sdram_config;
- 
- void dram_init(void);
- 
--- 
-2.31.1
-
diff --git a/recipes-bsp/trusted-firmware-a/trusted-firmware-a_%.bbappend b/recipes-bsp/trusted-firmware-a/trusted-firmware-a_%.bbappend
index f7777a7..074d0e0 100644
--- a/recipes-bsp/trusted-firmware-a/trusted-firmware-a_%.bbappend
+++ b/recipes-bsp/trusted-firmware-a/trusted-firmware-a_%.bbappend
@@ -8,7 +8,6 @@ COMPATIBLE_MACHINE:append:rk3328 = "|rk3328"
 FILESEXTRAPATHS:prepend := "${THISDIR}/files:"
 SRC_URI += "\
     file://serial-console-baudrate.patch \
-    file://0001-Fix-build-with-gcc-11.patch \
     file://0001-dram-Fix-build-with-gcc-11.patch \
     file://0001-plat_macros.S-Use-compatible-.asciz-asm-directive.patch \
     file://0001-pmu-Do-not-mark-already-defined-functions-as-weak.patch \
-- 
2.34.1



^ permalink raw reply related	[flat|nested] 2+ messages in thread
* Re: [meta-rockchip][PATCH] trusted-firmware-a: Drop 0001-Fix-build-with-gcc-11.patch
  2021-12-08 19:54 [meta-rockchip][PATCH] trusted-firmware-a: Drop 0001-Fix-build-with-gcc-11.patch Khem Raj
@ 2021-12-09  2:02 ` Trevor Woerner
  0 siblings, 0 replies; 2+ messages in thread
From: Trevor Woerner @ 2021-12-09  2:02 UTC (permalink / raw)
  To: Khem Raj; +Cc: yocto

On Wed 2021-12-08 @ 11:54:04 AM, Khem Raj wrote:
> This has been included upstream see [1]
> 
> [1] https://review.trustedfirmware.org/plugins/gitiles/TF-A/trusted-firmware-a/+/f943b7c8e292e3aad2fcbdd0a37505f62b3b4c87%5E%21/#F0
> 
> Signed-off-by: Khem Raj <raj.khem@gmail.com>
> ---
>  .../files/0001-Fix-build-with-gcc-11.patch    | 34 -------------------
>  .../trusted-firmware-a_%.bbappend             |  1 -
>  2 files changed, 35 deletions(-)
>  delete mode 100644 recipes-bsp/trusted-firmware-a/files/0001-Fix-build-with-gcc-11.patch

Applied to meta-rockchip master. Thanks!


^ permalink raw reply	[flat|nested] 2+ messages in thread
end of thread, other threads:[~2021-12-09  2:02 UTC | newest]

Thread overview: 2+ messages (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2021-12-08 19:54 [meta-rockchip][PATCH] trusted-firmware-a: Drop 0001-Fix-build-with-gcc-11.patch Khem Raj
2021-12-09  2:02 ` Trevor Woerner

